--- a/style.css
+++ b/style.css
@@ -37,12 +37,13 @@ a{
     color: black;
 }
 
-/* header css */
+/* header css ********** */
 header{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url(/Assets/Hero-bg.png);
 }
 .nav-bar{
     display: flex;
@@ -56,4 +57,15 @@ header{
     font-size: 34px;
     font-family: Inter, Raleway, sans-serif;
     font-weight: bold;
+}
+
+.header-main-section{
+    text-align: center;
+    margin-top: 158px ;
+    margin-bottom: 152px;
+}
+.header-main-section h1{
+    font-size: 65px;
+    font-weight: bold;
+    margin-bottom: 37px;
 }
