--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ button:hover{
     
 }
 
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 a{
     text-decoration: none;
     color: black;
@@ -98,4 +104,36 @@ header{
     border: none;
     border-radius: 28px;
     margin-right: 159px;
+}
+
+/* Productive Users Section */
+.productive-user-section{
+    flex-direction: column;
+    background-color: #4d47ff3a;
+    width: 1140px;
+    height: 306px;
+    padding: 50px 80px;
+    gap: 40px;
+    margin: auto;
+    border-radius: 24px;
+}
+
+.productive-user-section h2{
+    font-size: 38px;
+    font-weight: bold;
+}
+.productive-user-section-info{
+    gap: 158px;
+}
+.productive-user-section-info-data h2{
+    font-family: inter, raleway;
+    font-size: 80px;
+    font-weight: bold;
+    color: #4E47FF;
+}
+.productive-user-section-info-data p{
+    font-family: inter, raleway;
+    font-size: 20px;
+    color: #00000074;
+    text-align: center;
 }
