--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ input, textarea{
 /* button hover */
 button:hover, .btn:hover{
     background-color: #e6e941;
-    font-size: 17px;
+    font-size: 16.3px;
     transition: 0.4s;
     color: black;
 }
@@ -51,6 +51,10 @@ a{
 }
 textarea{
     resize: none;
+}
+
+body{
+    background-color: #f8f5ff;
 }
 
 /* header css ********** */
@@ -206,6 +210,30 @@ header{
 .user-profile p{
     color: #8987A1;
     font-size: 12px;
+}
+
+
+
+/* focus-better-section */
+.focus-better-section{
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 71px 150px;
+    border-radius: 15px;
+}
+
+.focus-better-section img{
+    width: 840px;
+    height: 365px;
+    border: none;
+    border-radius: 48px;
+}
+.focus-better-section h1{
+    font-size: 50px;
+}
+.focus-better-section p{
+    color: #8987A1;
 }
 
 /* lets-get-in-touch-section */
